syntax = "proto3";

package proto.common;

option go_package = "pitaya-game/common/pb/golang/common;commonpb";
option csharp_namespace = "PitayaGame.Common";

// ============================================================================
// 通用数据类型定义
// ============================================================================

// 通用响应结构
message CommonResp {
  int32 code = 1;        // 错误码，0表示成功
  string message = 2;     // 错误消息
}

// 用户基础信息
message UserBasicInfo {
  string user_id = 1;
  string username = 2;
  int32 level = 3;
  int64 exp = 4;
  int64 create_time = 5;  // 创建时间戳（秒）
}

// 资源信息
message Resources {
  int64 coin = 1;         // 金币
  int64 diamond = 2;      // 钻石
  int64 energy = 3;       // 体力
}

// 位置信息
message Position {
  float x = 1;
  float y = 2;
  float z = 3;
}

// 时间范围
message TimeRange {
  int64 start_time = 1;   // 开始时间戳（秒）
  int64 end_time = 2;     // 结束时间戳（秒）
}

// 分页请求
message PageReq {
  int32 page = 1;         // 页码，从1开始
  int32 page_size = 2;    // 每页大小
}

// 分页响应
message PageResp {
  int32 page = 1;
  int32 page_size = 2;
  int32 total = 3;        // 总记录数
  int32 total_pages = 4;  // 总页数
}

